add running times for the sammed3d eval debug notebook

--- a/scripts/eval_debug.ipynb
+++ b/scripts/eval_debug.ipynb
@@ -45,10 +45,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU not available or CuPy/cuCIM error (No module named 'cupy'). Using SciPy for EDT.\n",
-      "Warning: config.yaml not found. Ensure SAM_REPO_DIR is manually added to PYTHONPATH if needed.\n",
-      "ERROR: Could not import 'medim' or helper functions: No module named 'medim_infer'\n",
-      "Ensure 'medim' is installed and the SAM-Med3D repo (containing medim_infer.py) is accessible via PYTHONPATH.\n"
+      "GPU not available or CuPy/cuCIM error (No module named 'cupy'). Using SciPy for EDT.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'segfm3d_nora_team'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01meval_tools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m      3\u001b[39m     compute_multi_class_dsc,\n\u001b[32m      4\u001b[39m     compute_multi_class_nsd,\n\u001b[32m      5\u001b[39m     generate_clicks,\n\u001b[32m      6\u001b[39m )\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mviz_tools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m center_of_mass, save_volume_viz\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msegfm3d_nora_team\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msammed3d\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SAMMed3DPredictor\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'segfm3d_nora_team'"
      ]
     }
    ],
@@ -67,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "abf5a58c",
    "metadata": {},
    "outputs": [],
@@ -79,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "c17ee80c",
    "metadata": {},
    "outputs": [],
@@ -91,7 +99,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "id": "b7882e62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cases.index(\"CT_AbdTumor_PETCT_27d69a8466.npz\")\n",
+    "len(os.listdir(os.path.join(config[\"RESULTS_DIR\"], \"sammed3d\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "6abf9bfe",
    "metadata": {},
    "outputs": [],
@@ -104,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "98129251",
    "metadata": {},
    "outputs": [
@@ -132,28 +162,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "id": "e16ce307",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['gts', 'spacing']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['gts', 'boxes', 'spacing']"
+       "(162, 512, 512)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(gt_data.keys())"
+    "gt_text = np.load(\"/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_incontext/SegFM3D/data/CT_AMOS_amos_0230(1).npz\", allow_pickle=True)\n",
+    "print(list(gt_text.keys()))\n",
+    "gt_text[\"gts\"].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "714c2421",
    "metadata": {},
    "outputs": [
@@ -203,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9e92e118",
    "metadata": {},
    "outputs": [
@@ -238,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1d46e9a7",
    "metadata": {},
    "outputs": [
@@ -281,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c0cd1105",
    "metadata": {},
    "outputs": [
@@ -303,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "128e702e",
    "metadata": {},
    "outputs": [
@@ -325,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "dcee4ade",
    "metadata": {},
    "outputs": [],
@@ -341,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "85d5dc35",
    "metadata": {},
    "outputs": [],
@@ -355,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "8f7cdd21",
    "metadata": {},
    "outputs": [
@@ -376,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d1605e15",
    "metadata": {},
    "outputs": [],
@@ -389,21 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "15874ebf",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "\n",
+    "start_time = time.time()\n",
     "roi_image, roi_label, roi_prev_seg, meta_info = data_preprocess(image, cls_gt, cls_prev_seg,\n",
     "                                                orig_spacing=spacing, \n",
-    "                                                category_index=class_id)"
+    "                                                category_index=class_id)\n",
+    "print(f\"Preprocessing time: {time.time() - start_time:.2f} seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1b248e45",
    "metadata": {},
    "outputs": [
@@ -481,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "c5e6bd0d",
    "metadata": {},
    "outputs": [
@@ -1019,14 +1059,18 @@
    ],
    "source": [
     "# model prediction\n",
+    "\n",
+    "start_time = time.time()\n",
     "image_embeddings = model.image_encoder(roi_image.to(device))\n",
     "print(f\"image_embeddings shape: {image_embeddings.shape}\")\n",
-    "print(f\"image_embeddings : {image_embeddings}\")\n"
+    "print(f\"image_embeddings : {image_embeddings}\")\n",
+    "\n",
+    "print(f\"image embedding time: {time.time() - start_time:.2f} seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "4f2ff1dd",
    "metadata": {},
    "outputs": [],
@@ -1053,17 +1097,21 @@
     "points_coords = torch.cat([points_coords, new_points_co], dim=1)\n",
     "points_labels = torch.cat([points_labels, new_points_la], dim=1)\n",
     "\n",
+    "start_time = time.time()\n",
+    "\n",
     "sparse_embeddings, dense_embeddings = model.prompt_encoder(\n",
     "    points=[points_coords, points_labels],\n",
     "    boxes=None,  # we currently not support bbox prompt\n",
     "    masks=prev_low_res_mask.to(device), #TODO passing no mask kills perf\n",
     "    # masks=None,\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(f\"prompt_encoder time: {time.time() - start_time:.2f} seconds\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "8ed6afac",
    "metadata": {},
    "outputs": [
@@ -1083,22 +1131,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "308c6a7f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "start_time = time.time()\n",
+    "\n",
     "low_res_masks, _ = model.mask_decoder(\n",
     "            image_embeddings=image_embeddings,  # (1, 384, 8, 8, 8)\n",
     "            image_pe=model.prompt_encoder.get_dense_pe(),  # (1, 384, 8, 8, 8)\n",
     "            sparse_prompt_embeddings=sparse_embeddings,  # (1, 2, 384)\n",
     "            dense_prompt_embeddings=dense_embeddings,  # (1, 384, 8, 8, 8)\n",
-    "        )\n"
+    "        )\n",
+    "\n",
+    "print(f\"mask decoder time: {time.time() - start_time:.2f} seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "b384487b",
    "metadata": {},
    "outputs": [
@@ -1127,20 +1179,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "5b5f2925",
    "metadata": {},
    "outputs": [],
    "source": [
+    "start_time = time.time()\n",
+    "\n",
     "prev_mask = F.interpolate(low_res_masks,\n",
     "                            size=roi_image.shape[-3:],\n",
     "                            mode='trilinear',\n",
-    "                            align_corners=False)"
+    "                            align_corners=False)\n",
+    "\n",
+    "print(f\"prev_mask shape: {prev_mask.shape}\")\n",
+    "save_volume_viz(prev_mask.cpu().detach().numpy()[0][0], slice_indices = None, show=True)\n",
+    "\n",
+    "medsam_seg_prob = torch.sigmoid(prev_mask)  # (1, 1, 64, 64, 64)\n",
+    "medsam_seg_prob = medsam_seg_prob.cpu().detach().numpy().squeeze()\n",
+    "medsam_seg_mask = (medsam_seg_prob > 0.5).astype(np.uint8)\n",
+    "\n",
+    "\n",
+    "medsam_seg_prob = torch.sigmoid(prev_mask)  # (1, 1, 64, 64, 64)\n",
+    "medsam_seg_prob = medsam_seg_prob.cpu().detach().numpy().squeeze()\n",
+    "medsam_seg_mask = (medsam_seg_prob > 0.5).astype(np.uint8)\n",
+    "\n",
+    "print(f\"medsam_seg_prob shape: {medsam_seg_prob.shape}\")\n",
+    "save_volume_viz(medsam_seg_prob, slice_indices = None, show=True)\n",
+    "\n",
+    "pred_ori = data_postprocess(medsam_seg_mask, meta_info)\n",
+    "final_pred[pred_ori!=0] = class_id\n",
+    "mask_pred = final_pred \n",
+    "\n",
+    "print(f\"postprocess time: {time.time() - start_time:.2f} seconds\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "3284c90e",
    "metadata": {},
    "outputs": [
@@ -1163,27 +1238,30 @@
     }
    ],
    "source": [
-    "print(f\"prev_mask shape: {prev_mask.shape}\")\n",
-    "save_volume_viz(prev_mask.cpu().detach().numpy()[0][0], slice_indices = None, show=True)"
+    "print(f\"final_pred shape: {final_pred.shape}\")\n",
+    "save_volume_viz(final_pred, slice_indices = None, show=True)\n",
+    "\n",
+    "np.unique(final_pred==class_id)\n",
+    "np.unique(gts==class_id)\n",
+    "print(f\"dsc: {compute_dice_coefficient(gts==class_id, final_pred==class_id)}\")\n",
+    "print(f\"nsd: {compute_multi_class_nsd(gts==class_id, final_pred==class_id, spacing=spacing)}\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "26ed08b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "medsam_seg_prob = torch.sigmoid(prev_mask)  # (1, 1, 64, 64, 64)\n",
-    "medsam_seg_prob = medsam_seg_prob.cpu().detach().numpy().squeeze()\n",
-    "medsam_seg_mask = (medsam_seg_prob > 0.5).astype(np.uint8)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "3ca210d6",
    "metadata": {},
    "outputs": [
@@ -1205,26 +1283,19 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "print(f\"medsam_seg_prob shape: {medsam_seg_prob.shape}\")\n",
-    "save_volume_viz(medsam_seg_prob, slice_indices = None, show=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "2cf30b59",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pred_ori = data_postprocess(medsam_seg_mask, meta_info)\n",
-    "final_pred[pred_ori!=0] = class_id\n",
-    "mask_pred = final_pred "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "00b2ee1d",
    "metadata": {},
    "outputs": [
@@ -1246,14 +1317,11 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "print(f\"final_pred shape: {final_pred.shape}\")\n",
-    "save_volume_viz(final_pred, slice_indices = None, show=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "e84ed79c",
    "metadata": {},
    "outputs": [
@@ -1268,14 +1336,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.unique(final_pred==class_id)\n",
-    "np.unique(gts==class_id)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "ebbab36a",
    "metadata": {},
    "outputs": [
@@ -1288,17 +1353,14 @@
      ]
     }
    ],
-   "source": [
-    "print(f\"dsc: {compute_dice_coefficient(gts==class_id, final_pred==class_id)}\")\n",
-    "print(f\"nsd: {compute_multi_class_nsd(gts==class_id, final_pred==class_id, spacing=spacing)}\")\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "segfm3d_2",
+   "display_name": ".venv",
    "language": "python",
-   "name": "segfm3d_2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
