option to save volumes to npz

--- a/experiments/data_exploration.ipynb
+++ b/experiments/data_exploration.ipynb
@@ -20,23 +20,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'z_min': 106, 'z_max': 116, 'z_mid': 112, 'z_mid_x_min': 130, 'z_mid_y_min': 219, 'z_mid_x_max': 197, 'z_mid_y_max': 296}\n",
-      " {'z_min': 85, 'z_max': 123, 'z_mid': 105, 'z_mid_x_min': 280, 'z_mid_y_min': 111, 'z_mid_x_max': 374, 'z_mid_y_max': 204}\n",
-      " {'z_min': 78, 'z_max': 117, 'z_mid': 99, 'z_mid_x_min': 126, 'z_mid_y_min': 138, 'z_mid_x_max': 206, 'z_mid_y_max': 218}\n",
-      " {'z_min': 93, 'z_max': 150, 'z_mid': 127, 'z_mid_x_min': 90, 'z_mid_y_min': 103, 'z_mid_x_max': 318, 'z_mid_y_max': 298}\n",
-      " {'z_min': 88, 'z_max': 118, 'z_mid': 106, 'z_mid_x_min': 222, 'z_mid_y_min': 199, 'z_mid_x_max': 337, 'z_mid_y_max': 260}\n",
-      " {'z_min': 107, 'z_max': 137, 'z_mid': 123, 'z_mid_x_min': 315, 'z_mid_y_min': 94, 'z_mid_x_max': 402, 'z_mid_y_max': 189}\n",
-      " {'z_min': 105, 'z_max': 141, 'z_mid': 123, 'z_mid_x_min': 274, 'z_mid_y_min': 150, 'z_mid_x_max': 392, 'z_mid_y_max': 295}\n",
-      " {'z_min': 108, 'z_max': 125, 'z_mid': 117, 'z_mid_x_min': 286, 'z_mid_y_min': 168, 'z_mid_x_max': 318, 'z_mid_y_max': 192}\n",
-      " {'z_min': 0, 'z_max': 18, 'z_mid': 10, 'z_mid_x_min': 193, 'z_mid_y_min': 133, 'z_mid_x_max': 322, 'z_mid_y_max': 251}\n",
-      " {'z_min': 131, 'z_max': 191, 'z_mid': 155, 'z_mid_x_min': 230, 'z_mid_y_min': 130, 'z_mid_x_max': 260, 'z_mid_y_max': 141}]\n"
+      "KeysView(NpzFile '/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_incontext/SegFM3D/results/nnint/MR_Spider_75_t1_ivd.npz' with keys: segs, all_segs)\n"
      ]
     }
    ],
    "source": [
-    "volume_path = \"/nfs/norasys/notebooks/camaret/segfm3d_nora_team/docker_submission/data/inputs/3D_val_gt/CT_AbdomenAtlas_BDMAP_00000006.npz\"\n",
+    "volume_path = \"/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_incontext/SegFM3D/results/nnint/MR_Spider_75_t1_ivd.npz\"\n",
     "vol = np.load(volume_path, allow_pickle=True)\n",
-    "print(vol[\"boxes\"])"
+    "print(vol.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9e50878e-fbf4-47fa-9d8f-ac3a5352fe56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(14, 462, 448)\n",
+      "(array([0, 1, 2, 3, 4, 5, 6], dtype=uint8), array([2869918,    5067,    6410,    5234,    5128,    3541,    2366]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vol[\"segs\"].shape)\n",
+    "print(np.unique(vol[\"segs\"], return_counts=True))"
    ]
   },
   {
