basic training loop

--- a/experiments/data_exploration.ipynb
+++ b/experiments/data_exploration.ipynb
@@ -5,9 +5,22 @@
    "execution_count": 1,
    "id": "8ecbe199",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "import torch\n",
+    "torch.cuda.is_available()\n"
    ]
   },
   {
@@ -207,9 +220,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "segfm3d_2",
+   "display_name": "segfm3d",
    "language": "python",
-   "name": "segfm3d_2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -221,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
