--- a/scripts/nnUnet_training_guide.ipynb
+++ b/scripts/nnUnet_training_guide.ipynb
@@ -13,23 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset_name = \"CT/CT_Abdomen1K\" # using a subset for now\n",
-    "nnunet_dataset_name = \"Dataset003_CT_Abdomen1K\""
+    "nnunet_dataset_name = \"Dataset004_10percent\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.config import config\n",
     "import os\n",
-    "train_dir = os.path.join(config[\"DATA_DIR\"], \"3D_train_npz_random_10percent_16G\", subset_name)\n",
     "nnunet_train_dir = os.path.join(config[\"DATA_DIR\"], \"nnunet_raw\", nnunet_dataset_name)\n",
     "os.makedirs(nnunet_train_dir, exist_ok=True)\n",
     "os.makedirs(os.path.join(nnunet_train_dir, \"imagesTr\"), exist_ok=True)\n",
@@ -40,259 +38,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "file : CT_Abdomen1K_Case_00813.npz, 0/100\n",
-      "(76, 512, 512) (76, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00234.npz, 1/100\n",
-      "(66, 512, 512) (66, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00151.npz, 2/100\n",
-      "(70, 512, 512) (70, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00414.npz, 3/100\n",
-      "(409, 512, 512) (409, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00350.npz, 4/100\n",
-      "(85, 512, 512) (85, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00047.npz, 5/100\n",
-      "(225, 512, 512) (225, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00977.npz, 6/100\n",
-      "(69, 512, 512) (69, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00164.npz, 7/100\n",
-      "(37, 512, 512) (37, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00612.npz, 8/100\n",
-      "(68, 512, 512) (68, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00882.npz, 9/100\n",
-      "(40, 512, 512) (40, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00577.npz, 10/100\n",
-      "(130, 512, 512) (130, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00792.npz, 11/100\n",
-      "(139, 512, 512) (139, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00089.npz, 12/100\n",
-      "(304, 512, 512) (304, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00837.npz, 13/100\n",
-      "(74, 512, 512) (74, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00514.npz, 14/100\n",
-      "(35, 512, 512) (35, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00842.npz, 15/100\n",
-      "(57, 512, 512) (57, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00727.npz, 16/100\n",
-      "(383, 512, 512) (383, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00390.npz, 17/100\n",
-      "(54, 512, 512) (54, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00087.npz, 18/100\n",
-      "(155, 512, 512) (155, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00870.npz, 19/100\n",
-      "(77, 512, 512) (77, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00281.npz, 20/100\n",
-      "(103, 512, 512) (103, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00712.npz, 21/100\n",
-      "(305, 512, 512) (305, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00470.npz, 22/100\n",
-      "(115, 512, 512) (115, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00484.npz, 23/100\n",
-      "(79, 512, 512) (79, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00323.npz, 24/100\n",
-      "(78, 512, 512) (78, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00200.npz, 25/100\n",
-      "(35, 512, 512) (35, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00356.npz, 26/100\n",
-      "(66, 512, 512) (66, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00209.npz, 27/100\n",
-      "(94, 512, 512) (94, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00503.npz, 28/100\n",
-      "(36, 512, 512) (36, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_01054.npz, 29/100\n",
-      "(201, 512, 512) (201, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00275.npz, 30/100\n",
-      "(99, 512, 512) (99, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_01061.npz, 31/100\n",
-      "(177, 512, 512) (177, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00298.npz, 32/100\n",
-      "(264, 512, 512) (264, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00815.npz, 33/100\n",
-      "(65, 512, 512) (65, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00931.npz, 34/100\n",
-      "(409, 512, 512) (409, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00869.npz, 35/100\n",
-      "(71, 512, 512) (71, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00544.npz, 36/100\n",
-      "(362, 512, 512) (362, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00460.npz, 37/100\n",
-      "(128, 512, 512) (128, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00693.npz, 38/100\n",
-      "(33, 512, 512) (33, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00584.npz, 39/100\n",
-      "(224, 512, 512) (224, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00952.npz, 40/100\n",
-      "(36, 512, 512) (36, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00983.npz, 41/100\n",
-      "(65, 512, 512) (65, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00403.npz, 42/100\n",
-      "(42, 512, 512) (42, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00527.npz, 43/100\n",
-      "(189, 512, 512) (189, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00895.npz, 44/100\n",
-      "(198, 512, 512) (198, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00605.npz, 45/100\n",
-      "(80, 512, 512) (80, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00443.npz, 46/100\n",
-      "(40, 512, 512) (40, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00785.npz, 47/100\n",
-      "(40, 512, 512) (40, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00646.npz, 48/100\n",
-      "(84, 512, 512) (84, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00580.npz, 49/100\n",
-      "(71, 512, 512) (71, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00719.npz, 50/100\n",
-      "(40, 512, 512) (40, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00765.npz, 51/100\n",
-      "(32, 512, 512) (32, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00958.npz, 52/100\n",
-      "(235, 512, 512) (235, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00061.npz, 53/100\n",
-      "(45, 512, 512) (45, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00255.npz, 54/100\n",
-      "(41, 512, 512) (41, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00980.npz, 55/100\n",
-      "(62, 512, 512) (62, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00710.npz, 56/100\n",
-      "(34, 512, 512) (34, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00395.npz, 57/100\n",
-      "(37, 512, 512) (37, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00082.npz, 58/100\n",
-      "(74, 512, 512) (74, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00498.npz, 59/100\n",
-      "(71, 512, 512) (71, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00608.npz, 60/100\n",
-      "(35, 512, 512) (35, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00179.npz, 61/100\n",
-      "(33, 512, 512) (33, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00746.npz, 62/100\n",
-      "(94, 512, 512) (94, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00823.npz, 63/100\n",
-      "(96, 512, 512) (96, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00204.npz, 64/100\n",
-      "(84, 512, 512) (84, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00619.npz, 65/100\n",
-      "(59, 512, 512) (59, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_01059.npz, 66/100\n",
-      "(179, 512, 512) (179, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00045.npz, 67/100\n",
-      "(34, 512, 512) (34, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00856.npz, 68/100\n",
-      "(61, 512, 512) (61, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00276.npz, 69/100\n",
-      "(119, 512, 512) (119, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00617.npz, 70/100\n",
-      "(70, 512, 512) (70, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00039.npz, 71/100\n",
-      "(274, 512, 512) (274, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00367.npz, 72/100\n",
-      "(86, 512, 512) (86, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00947.npz, 73/100\n",
-      "(292, 512, 512) (292, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00932.npz, 74/100\n",
-      "(34, 512, 512) (34, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00686.npz, 75/100\n",
-      "(214, 512, 512) (214, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00079.npz, 76/100\n",
-      "(230, 512, 512) (230, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00020.npz, 77/100\n",
-      "(54, 512, 512) (54, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00214.npz, 78/100\n",
-      "(51, 512, 512) (51, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00055.npz, 79/100\n",
-      "(44, 512, 512) (44, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00448.npz, 80/100\n",
-      "(166, 512, 512) (166, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00171.npz, 81/100\n",
-      "(82, 512, 512) (82, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00600.npz, 82/100\n",
-      "(106, 512, 512) (106, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00192.npz, 83/100\n",
-      "(51, 512, 512) (51, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00067.npz, 84/100\n",
-      "(202, 512, 512) (202, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_01009.npz, 85/100\n",
-      "(82, 512, 512) (82, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00473.npz, 86/100\n",
-      "(103, 512, 512) (103, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00004.npz, 87/100\n",
-      "(57, 512, 512) (57, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00934.npz, 88/100\n",
-      "(36, 512, 512) (36, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00548.npz, 89/100\n",
-      "(35, 512, 512) (35, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00997.npz, 90/100\n",
-      "(62, 512, 512) (62, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00183.npz, 91/100\n",
-      "(66, 512, 512) (66, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00881.npz, 92/100\n",
-      "(69, 512, 512) (69, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00735.npz, 93/100\n",
-      "(62, 512, 512) (62, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00501.npz, 94/100\n",
-      "(76, 512, 512) (76, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00973.npz, 95/100\n",
-      "(85, 512, 512) (85, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00859.npz, 96/100\n",
-      "(74, 512, 512) (74, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00791.npz, 97/100\n",
-      "(199, 512, 512) (199, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00747.npz, 98/100\n",
-      "(35, 512, 512) (35, 512, 512) [0.703125 0.703125 2.5     ]\n",
-      "file : CT_Abdomen1K_Case_00450.npz, 99/100\n",
-      "(181, 512, 512) (181, 512, 512) [0.703125 0.703125 2.5     ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import nibabel as nib\n",
-    "\n",
+    "# use only a subdir\n",
+    "\"\"\"\n",
+    "subset_name = \"CT/CT_Abdomen1K\" # using a subset for now\n",
+    "train_dir = os.path.join(config[\"DATA_DIR\"], \"3D_train_npz_random_10percent_16G\", subset_name)\n",
     "files = os.listdir(train_dir)\n",
-    "for i, file in enumerate(files):\n",
-    "    subset = \"Tr\" if i < len(files) * 0.8 else \"Ts\"\n",
-    "    print(f\"file : {file}, {i}/{len(files)}\")\n",
-    "    data = np.load(os.path.join(train_dir, file), allow_pickle=True)\n",
-    "    # print(data.keys()) # imgs, gts, spacing\n",
-    "    imgs = data[\"imgs\"]\n",
-    "    # add a channel dimension to the imgs\n",
-    "    #imgs = np.expand_dims(imgs, axis=0)\n",
-    "    affine = np.eye(4)\n",
-    "    affine[0, 0] = data[\"spacing\"][0]\n",
-    "    affine[1, 1] = data[\"spacing\"][1]\n",
-    "    affine[2, 2] = data[\"spacing\"][2]\n",
-    "    nib_img = nib.Nifti1Image(imgs, affine=affine)\n",
-    "    nib.save(nib_img, os.path.join(nnunet_train_dir, \"images\"+subset, file.replace(\".npz\", \"_0000.nii.gz\")))\n",
-    "\n",
-    "    gts = data[\"gts\"]\n",
-    "    # only keep the label 1 for now\n",
-    "    gts = (gts == 1).astype(np.int8)\n",
-    "    nib_gt = nib.Nifti1Image(gts, affine=affine)\n",
-    "    nib.save(nib_gt, os.path.join(nnunet_train_dir, \"labels\"+subset, file.replace(\".npz\", \".nii.gz\")))\n",
-    "    print(imgs.shape, gts.shape, spacing)\n",
-    "    \n",
-    "\n",
-    "\n"
+    "\"\"\"\n",
+    "# or full dataset\n",
+    "files = [os.path.join(dp, f) for dp, dn, filenames in os.walk(os.path.join(config[\"DATA_DIR\"], \"3D_train_npz_random_10percent_16G\")) for f in filenames if os.path.splitext(f)[1] == '.npz']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "80"
+       "'/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_incontext/SegFM3D/data/3D_train_npz_random_10percent_16G/Ultrasound/US_Low-limb-Leg/US_Low-limb-Leg07.npz'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import nibabel as nib\n",
+    "import os\n",
+    "from multiprocessing import Pool\n",
+    "from functools import partial\n",
+    "\n",
+    "def process_file(file_info, train_dir, nnunet_train_dir, total_files):\n",
+    "    i, file = file_info\n",
+    "    subset = \"Tr\" if i < total_files * 0.8 else \"Ts\"\n",
+    "    print(f\"file : {os.path.basename(file)}, {i}/{total_files}\")\n",
+    "    \n",
+    "    data = np.load( file, allow_pickle=True)\n",
+    "    imgs = data[\"imgs\"]\n",
+    "    \n",
+    "    # Create affine matrix\n",
+    "    affine = np.eye(4)\n",
+    "    affine[0, 0] = data[\"spacing\"][0]\n",
+    "    affine[1, 1] = data[\"spacing\"][1]\n",
+    "    affine[2, 2] = data[\"spacing\"][2]\n",
+    "    \n",
+    "    # Save images\n",
+    "    nib_img = nib.Nifti1Image(imgs, affine=affine)\n",
+    "    nib.save(nib_img, os.path.join(nnunet_train_dir, \"images\"+subset, os.path.basename(file).replace(\".npz\", \"_0000.nii.gz\")))\n",
+    "    \n",
+    "    # Process and save ground truth\n",
+    "    gts = data[\"gts\"]\n",
+    "    #gts = (gts == 1).astype(np.int8)\n",
+    "    nib_gt = nib.Nifti1Image(gts, affine=affine)\n",
+    "    nib.save(nib_gt, os.path.join(nnunet_train_dir, \"labels\"+subset, os.path.basename(file).replace(\".npz\", \".nii.gz\")))\n",
+    "    \n",
+    "    return file\n",
+    "\n",
+    "# Main execution\n",
+    "# Create list of (index, filename) tuples\n",
+    "file_list = [(i, file) for i, file in enumerate(files)]\n",
+    "\n",
+    "# Create partial function with fixed arguments\n",
+    "process_func = partial(process_file, \n",
+    "                      train_dir=train_dir, \n",
+    "                      nnunet_train_dir=nnunet_train_dir, \n",
+    "                      total_files=len(files))\n",
+    "\n",
+    "# Use 14 cores (leave 2 for system)\n",
+    "with Pool(processes=14) as pool:\n",
+    "    results = pool.map(process_func, file_list)\n",
+    "\n",
+    "print(f\"Processed {len(results)} files successfully\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2388"
+      ]
+     },
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,12 +222,12 @@
     "# add a 3d_fullres_ps192_bs1 that sets batch size = 1 since we are gpu poor \n",
     "\n",
     "# preprocess the dataset\n",
-    "nnUNetv2_preprocess -d 2 -np 12 -plans_name nnUNetResEncUNetLPlans_noResampling -c 3d_fullres_ps192_bs1\n",
+    "nnUNetv2_preprocess -d 4 -np 12 -plans_name nnUNetResEncUNetLPlans_noResampling -c 3d_fullres_ps192_bs1\n",
     "\n",
     "\n",
     "# define a custom trainer in  nnUNet/nnunetv2/training/nnUNetTrainer/CustomTrainer.py\n",
     "# train using the custom trainer with our preprocessing steps\n",
-    "nnUNetv2_train 2 3d_fullres_ps192 0 -p nnUNetResEncUNetLPlans_noResampling -tr CustomTrainer --num_gpus 1"
+    "nnUNetv2_train 4 3d_fullres_ps192 0 -p nnUNetResEncUNetLPlans_noResampling -tr CustomTrainer --num_gpus 1"
    ]
   },
   {
