update training guide

--- a/scripts/nnUnet_training_guide.ipynb
+++ b/scripts/nnUnet_training_guide.ipynb
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nnunet_dataset_name = \"Dataset004_10percent\""
+    "nnunet_dataset_name = \"Dataset005_AMOS\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,45 +38,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# use only a subdir\n",
-    "\"\"\"\n",
-    "subset_name = \"CT/CT_Abdomen1K\" # using a subset for now\n",
-    "train_dir = os.path.join(config[\"DATA_DIR\"], \"3D_train_npz_random_10percent_16G\", subset_name)\n",
-    "files = os.listdir(train_dir)\n",
-    "\"\"\"\n",
-    "# or full dataset\n",
-    "files = [os.path.join(dp, f) for dp, dn, filenames in os.walk(os.path.join(config[\"DATA_DIR\"], \"3D_train_npz_random_10percent_16G\")) for f in filenames if os.path.splitext(f)[1] == '.npz']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_incontext/SegFM3D/data/3D_train_npz_random_10percent_16G/Ultrasound/US_Low-limb-Leg/US_Low-limb-Leg07.npz'"
+       "'\\n# or full dataset\\nfiles = [os.path.join(dp, f) for dp, dn, filenames in os.walk(os.path.join(config[\"DATA_DIR\"], \"3D_train_npz_random_10percent_16G\")) for f in filenames if os.path.splitext(f)[1] == \\'.npz\\']\\n'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "files[0]"
+    "# use only a subdir\n",
+    "\n",
+    "subset_name = \"CT/CT_AMOS\" # using a subset for now\n",
+    "train_dir = os.path.join(config[\"DATA_DIR\"], \"3D_train_npz_random_10percent_16G\", subset_name)\n",
+    "files = [os.path.join(train_dir,f) for f in os.listdir(train_dir) if os.path.splitext(f)[1] == '.npz']\n",
+    "\"\"\"\n",
+    "# or full dataset\n",
+    "files = [os.path.join(dp, f) for dp, dn, filenames in os.walk(os.path.join(config[\"DATA_DIR\"], \"3D_train_npz_random_10percent_16G\")) for f in filenames if os.path.splitext(f)[1] == '.npz']\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13]\n",
+      "[ 0  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
+      "Processed 30 files successfully\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import nibabel as nib\n",
@@ -87,7 +137,7 @@
     "def process_file(file_info, train_dir, nnunet_train_dir, total_files):\n",
     "    i, file = file_info\n",
     "    subset = \"Tr\" if i < total_files * 0.8 else \"Ts\"\n",
-    "    print(f\"file : {os.path.basename(file)}, {i}/{total_files}\")\n",
+    "    #print(f\"file : {os.path.basename(file)}, {i}/{total_files}\")\n",
     "    \n",
     "    data = np.load( file, allow_pickle=True)\n",
     "    imgs = data[\"imgs\"]\n",
@@ -104,6 +154,7 @@
     "    \n",
     "    # Process and save ground truth\n",
     "    gts = data[\"gts\"]\n",
+    "    print(np.unique(gts))\n",
     "    #gts = (gts == 1).astype(np.int8)\n",
     "    nib_gt = nib.Nifti1Image(gts, affine=affine)\n",
     "    nib.save(nib_gt, os.path.join(nnunet_train_dir, \"labels\"+subset, os.path.basename(file).replace(\".npz\", \".nii.gz\")))\n",
@@ -129,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2388"
+       "26"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,17 +268,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cp nnInteractive_v1.0/plans.json $nnUNet_preprocessed/DatasetXXX_XXX/nnUNetResEncUNetLPlans_noResampling.json\n",
+    "nnUNetv2_extract_fingerprint -d 5 --verify_dataset_integrity\n",
     "\n",
-    "# add a 3d_fullres_ps192_bs1 that sets batch size = 1 since we are gpu poor \n",
+    "\n",
+    "# a) using ResEnc plans : \n",
+    "nnUNetv2_plan_experiment -d 5 -pl nnUNetPlannerResEncL\n",
+    "\n",
+    "# b) using plans from nnInteractive_v1.0 :\n",
+    "# cp nnInteractive_v1.0/plans.json $nnUNet_preprocessed/DatasetXXX_XXX/nnUNetResEncUNetLPlans_noResampling.json\n",
+    "# in nnUNetResEncUNetLPlans_noResampling.json :\n",
+    "# change the \"dataset_name\" field to the current one\n",
+    "# change the \"resampling...\" fields to another method since we cannot access \"no_resampling_hack\" (e.g. \"resample_data_or_seg_to_shape\")\n",
+    "# add a method 3d_fullres_ps192_bs1 that sets batch size = 1 since we are gpu poor \n",
     "\n",
     "# preprocess the dataset\n",
-    "nnUNetv2_preprocess -d 4 -np 12 -plans_name nnUNetResEncUNetLPlans_noResampling -c 3d_fullres_ps192_bs1\n",
+    "nnUNetv2_preprocess -d 5 -np 12 -plans_name nnUNetResEncUNetLPlans_noResampling -c 3d_fullres_ps192_bs1\n",
     "\n",
     "\n",
     "# define a custom trainer in  nnUNet/nnunetv2/training/nnUNetTrainer/CustomTrainer.py\n",
     "# train using the custom trainer with our preprocessing steps\n",
-    "nnUNetv2_train 4 3d_fullres_ps192 0 -p nnUNetResEncUNetLPlans_noResampling -tr CustomTrainer --num_gpus 1"
+    "nnUNetv2_train 5 3d_fullres_ps192 0 -p nnUNetResEncUNetLPlans_noResampling -tr CustomTrainer\n",
+    "# additional args : \n",
+    "--num_gpus 1 -pretrained_weights /nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_incontext/SegFM3D/checkpoints/nnInteractive_v1.0/fold_0/checkpoint_final.pth"
    ]
   },
   {
